--- a/Replika style.css
+++ b/Replika style.css
@@ -1,10 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
-.header-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-content: center;
+
+
+.header-sattelit{ 
+float: right;
+max-height: 50px; 
+max-width: 50px;
 }
 
 .main-color-grid {
@@ -14,7 +16,7 @@
 .header-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+ position: relative;
   padding: 10px; 
 }
 
@@ -44,10 +46,8 @@ grid-column-gap: 10%;
 
 grid-row-gap: -20%;
 	
-grid-template-rows: 200px 200px;
-	
+grid-template-rows: 200px 200px;	
 }
-
 
 
 .picture-grid img{
