--- a/Replika style.css
+++ b/Replika style.css
@@ -1,52 +1,109 @@
 @charset "utf-8";
 /* CSS Document */
+@viewport {
+    width: device-width;
+    initial-scale: 1;
+ }
 
 
-
-.header-sattelit{ 
-float: right;
-max-height: 50px; 
-max-width: 50px;
-}
 
 .main-color-grid {
-  background-color: aqua;
+  background-color:#263CCB;
 }
 
 .header-container {
-  display: flex;
-  justify-content: space-between;
- position: relative;
-  padding: 10px; 
+  display: grid;
+  grid-template-columns: 1fr 2fr auto;
+align-items: center;
+ 
+}
+
+
+.header-title {
+  text-align: left;
+}
+
+.header-searchbar{
+ display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+}
+.header-searchbar input[type="text"] {
+    width: 80%; 
+    padding: 0px;
+	 }
+
+.header-searchbar button {
+    margin-left: 0px; 
 }
 
 .header-logo {
-  width: 50px; 
-  height: auto; 
-  margin-left: 10px; 
+margin-left: auto;
+max-height: 50px
 }
 
-.header-title, .header-searchbar {
-  text-align: center;
+.white-header-box{
+background-color: #FFFFFF;
+max-height: 40px;
+border-radius: 5px
 }
 
-.header-logo img {
-  max-height: 50px; 
-  max-width: 50px;
+.white-header-box p {
+margin:3px;
 }
 
+.reklame-banner img{
+width: 100%;
+max-height: 150px;
+}
+
+.forside-grid{
+display: flex;
+}
+
+.sidebar{
+background-color: #CF1F1F;
+color:#FFFFFF;
+width: 30%;
+padding: 5px;
+box-sizing: border-box;
+}
+
+.kategori{
+cursor: pointer;
+margin-bottom: 10px;
+border:1px solid #000000;
+border-radius: 5px;
+	
+}
+
+.kategori:hover{
+margin: 2px;
+font-size: 20px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+transform: scale(1.1);
+}
+
+.kategori.aktiv{
+margin: 2px;
+font-size: 20px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+transform: scale(1.1);
+}
+
+.kategori:not(.aktiv):hover{
+margin: 2px;
+font-size: 20px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+transform: scale(1.1);
+}
 
 .picture-grid {
-	
-display: grid;
-	
-grid-template-columns: 1fr 1fr 1fr 1fr;
-	
-grid-column-gap: 10%;
-
-grid-row-gap: -20%;
-	
-grid-template-rows: 200px 200px;	
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 30%; 
+    justify-content: space-evenly; 
 }
 
 
