--- a/Replika style.css
+++ b/Replika style.css
@@ -8,37 +8,38 @@
 
 
 .main-color-grid {
-  background-color:#263CCB;
+background-color:#263CCB;
 }
 
 .header-container {
-  display: grid;
-  grid-template-columns: 1fr 2fr auto;
+display: grid;
+grid-template-columns: 2fr 4fr 1fr 1fr;
 align-items: center;
- 
+padding: 10px; 
 }
 
 
 .header-title {
-  text-align: left;
+grid-column: 1;
 }
 
 .header-searchbar{
- display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
+grid-column: 2;
+display: flex;
+align-items: center;
 }
+
 .header-searchbar input[type="text"] {
-    width: 80%; 
-    padding: 0px;
-	 }
+flex-grow: 2;
+padding:5px
+}
 
 .header-searchbar button {
-    margin-left: 0px; 
+margin-left:5px
 }
 
 .header-logo {
+grid-column 1fr;
 margin-left: auto;
 max-height: 50px
 }
@@ -46,11 +47,13 @@ max-height: 50px
 .white-header-box{
 background-color: #FFFFFF;
 max-height: 40px;
-border-radius: 5px
+border-radius: 5px;
+margin-right: 10%;
+grid-column: 4;
 }
 
 .white-header-box p {
-margin:3px;
+margin:1px;
 }
 
 .reklame-banner img{
