--- a/Replika style.css
+++ b/Replika style.css
@@ -14,13 +14,20 @@ background-color:#263CCB;
 .header-container {
 display: grid;
 grid-template-columns: 2fr 4fr 1fr 1fr;
-align-items: center;
-padding: 10px; 
+align-items: center; 
 }
 
 
 .header-title {
 grid-column: 1;
+color:#CF1F1F;
+text-align: center;
+}
+.header-title-container{
+background-color: #FFFFFF;
+display: inline-block;
+padding: 4%;
+max-width: 40%;
 }
 
 .header-searchbar{
@@ -61,42 +68,35 @@ width: 100%;
 max-height: 150px;
 }
 
-.forside-grid{
-display: flex;
-grid-column: 2/3;
+.forside-grid {
+display: grid;
+grid-template-columns: 10% 1fr auto;
 }
 
-.sidebar{
-background-color: #CF1F1F;
-color:#FFFFFF;
-width: 30%;
-padding: 5px;
+.sidebar {
+background-color: #CF1F1F; 
+color: #FFFFFF;
+padding: 10%;
 box-sizing: border-box;
+margin-right: 5%
 }
 
-.kategori{
+.kategori {
 cursor: pointer;
 margin-bottom: 10px;
-border:1px solid #000000;
+border: 1px solid #000000;
 border-radius: 5px;
-	
 }
 
-.kategori:hover{
+.kategori:hover,
+.kategori.aktiv {
 margin: 2px;
 font-size: 20px;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 transform: scale(1.1);
 }
 
-.kategori.aktiv{
-margin: 2px;
-font-size: 20px;
-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-transform: scale(1.1);
-}
-
-.kategori:not(.aktiv):hover{
+.kategori:not(.aktiv):hover {
 margin: 2px;
 font-size: 20px;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -104,16 +104,15 @@ transform: scale(1.1);
 }
 
 .picture-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 30%; 
-    justify-content: space-evenly; 
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;
+grid-gap: 20%;
+justify-content: space-evenly;
+
 }
 
-
-.picture-grid img{
+.picture-grid img {
 max-height: 100px;
-max-width: 100px
-
+max-width: 100px;
 }
 
