--- a/Hjemmeside replika - underside efter søg - style.css
+++ b/Hjemmeside replika - underside efter søg - style.css
@@ -1,8 +1,15 @@
 @charset "utf-8";
 /* CSS Document */
 
+body {
+ margin: 0;
+            padding: 0;
+            height: 100vh;
+            background: linear-gradient(to bottom, white 70%, #28B3E6);
+}
+
 .main-color-grid {
-background-color:#263CCB;
+background-color:#28B3E6;
 }
 
 .header-container {
@@ -14,11 +21,11 @@ align-items: center;
 
 .header-title {
 grid-column: 1;
-color:#CF1F1F;
+color:#FFFFFF;
 text-align: center;
 }
 .header-title-container{
-background-color: #FFFFFF;
+background-color: #28B3E6;
 display: inline-block;
 padding: 4%;
 max-width: 40%;
