--- a/Replika style.css
+++ b/Replika style.css
@@ -44,7 +44,8 @@ align-items: center;
 
 .header-searchbar input[type="text"] {
 flex-grow: 2;
-padding:5px
+padding:5px;
+font-family: Montserrat,sans-serif;
 }
 
 .header-searchbar button {
